objects/Case.object
<CustomObject>
    <fields>
        <fullName>Destination_on_Baggage_tag__c</fullName>
        <label>Destination on Baggage tag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agartala (IXA)</fullName>
                </value>
                <value>
                    <fullName>Ahmedabad (AMD)</fullName>
                </value>
                <value>
                    <fullName>Amritsar (ATQ)</fullName>
                </value>
                <value>
                    <fullName>Bagdogra (IXB)</fullName>
                </value>
                <value>
                    <fullName>Bangkok (BKK)</fullName>
                </value>
                <value>
                    <fullName>Belagavi (IXG)</fullName>
                </value>
                <value>
                    <fullName>Bengaluru (BLR)</fullName>
                </value>
                <value>
                    <fullName>Chandigarh (IXC)</fullName>
                </value>
                <value>
                    <fullName>Chennai (MAA)</fullName>
                </value>
                <value>
                    <fullName>Coimbatore (CJB)</fullName>
                </value>
                <value>
                    <fullName>Colombo (CMB)</fullName>
                </value>
                <value>
                    <fullName>Dehradun (DED)</fullName>
                </value>
                <value>
                    <fullName>Delhi (DEL)</fullName>
                </value>
                <value>
                    <fullName>Dharamshala (DHM)</fullName>
                </value>
                <value>
                    <fullName>Dubai (DXB)</fullName>
                </value>
                <value>
                    <fullName>Goa (GOI)</fullName>
                </value>
                <value>
                    <fullName>Guwahati (GAU)</fullName>
                </value>
                <value>
                    <fullName>Hyderabad (HYD)</fullName>
                </value>
                <value>
                    <fullName>Jabalpur (JLR)</fullName>
                </value>
                <value>
                    <fullName>Jaipur (JAI)</fullName>
                </value>
                <value>
                    <fullName>Jammu (IXJ)</fullName>
                </value>
                <value>
                    <fullName>Jodhpur (JDH)</fullName>
                </value>
                <value>
                    <fullName>Kabul (KBL)</fullName>
                </value>
                <value>
                    <fullName>Kochi (COK)</fullName>
                </value>
                <value>
                    <fullName>Kolkata (CCU)</fullName>
                </value>
                <value>
                    <fullName>Kozhikode (CCJ)</fullName>
                </value>
                <value>
                    <fullName>Madurai (IXM)</fullName>
                </value>
                <value>
                    <fullName>Male (MLE)</fullName>
                </value>
                <value>
                    <fullName>Mangalore (IXE)</fullName>
                </value>
                <value>
                    <fullName>Mumbai (BOM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dhaka__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Airport Name</label>
        <referenceTo>Airport_Name__c</referenceTo>
        <relationshipLabel>Cases (Airport Name)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Domain__c</fullName>
        <formula>RIGHT(SuppliedEmail, LEN(SuppliedEmail) - FIND(&quot;@&quot;, SuppliedEmail))</formula>
        <label>Email Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entitlement_Start_Time__c</fullName>
        <description>Backend field to track the Entitlement Start Time.
Populated using workflow when the case is first assigned from Queue to user</description>
        <label>Entitlement Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Response_Time__c</fullName>
        <label>First Response Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flight_No__c</fullName>
        <label>Flight No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Flight Record</label>
        <referenceTo>Journey_Detail__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Host__c</fullName>
        <label>Host</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hotel__c</fullName>
        <label>Hotel</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hour__c</fullName>
        <description>for Reporting purpose for reservations</description>
        <formula>MID(TEXT(CreatedDate + 0.229),12, 2)</formula>
        <label>Hour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_BIR_Sent__c</fullName>
        <label>Is BIR Sent?</label>
        <summaryFilterItems>
            <field>Baggage_Detail__c.BIR_Sent__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Baggage_Detail__c.Case_No__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Is_Case_Creator__c</fullName>
        <formula>IF( CreatedById ==  $User.Id , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Case Creator?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Process_Builder_Executing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Process Builder Executing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leave_Type__c</fullName>
        <label>Leave Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Admin_Subject__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PL</fullName>
                </value>
                <value>
                    <fullName>C.Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Message_Date__c</fullName>
        <label>Message Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>My_Airport__c</fullName>
        <formula>Airport1__r.Name = TEXT($User.Airport__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Airport ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Incoming_Emails__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No. of Incoming Emails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Missing_Baggage__c</fullName>
        <label>Number of Missing Baggage</label>
        <summaryForeignKey>Baggage_Detail__c.Case_No__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Other_Baggage_Color__c</fullName>
        <label>Other Baggage Color</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Baggage_Type__c</fullName>
        <label>Other Baggage Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_IsUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner IsUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Profile_Name__c</fullName>
        <formula>Owner:User.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PNR_No__c</fullName>
        <label>PNR No.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PNR_Record__c</fullName>
        <label>PNR Record</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Passenger_First_Name__c</fullName>
        <label>Passenger First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passenger_Last_Name__c</fullName>
        <label>Passenger Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passenger_Phone_Number__c</fullName>
        <label>Passenger Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Passenger_Routing__c</fullName>
        <label>Passenger Routing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passenger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Passenger</label>
        <referenceTo>Passenger__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Type__c</fullName>
        <label>Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Landline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pieces_of_Missing_Baggage__c</fullName>
        <label>Pieces of Missing Baggage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Power_of_1__c</fullName>
        <description>For Reporting Purpose</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power of 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Owner__c</fullName>
        <label>Process Owner</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Admin_Subject__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Team Leaders</fullName>
                </value>
                <value>
                    <fullName>Managers</fullName>
                </value>
                <value>
                    <fullName>Sr. Manager</fullName>
                </value>
                <value>
                    <fullName>Sr. General Manager</fullName>
                </value>
                <value>
                    <fullName>Assistant Manager - Admin</fullName>
                </value>
                <value>
                    <fullName>Supervisor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relevant_Person__c</fullName>
        <label>Relevant Person</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pradeep Shah</fullName>
                </value>
                <value>
                    <fullName>Binu Balachandran</fullName>
                </value>
                <value>
                    <fullName>Isha Gandhi</fullName>
                </value>
                <value>
                    <fullName>Deepa Jain</fullName>
                </value>
                <value>
                    <fullName>Niti Arora</fullName>
                </value>
                <value>
                    <fullName>Neha Chadha</fullName>
                </value>
                <value>
                    <fullName>Ankit Raghav</fullName>
                </value>
                <value>
                    <fullName>Nishat Khan</fullName>
                </value>
                <value>
                    <fullName>Pooja Panwar</fullName>
                </value>
                <value>
                    <fullName>Neha Kadian</fullName>
                </value>
                <value>
                    <fullName>Ashangbam Diana</fullName>
                </value>
                <value>
                    <fullName>Sumit Sharma</fullName>
                </value>
                <value>
                    <fullName>Sandeep Sharma</fullName>
                </value>
                <value>
                    <fullName>Raymond Henry</fullName>
                </value>
                <value>
                    <fullName>Vaibhav Bhardwaj</fullName>
                </value>
                <value>
                    <fullName>Abhishiek Baitha</fullName>
                </value>
                <value>
                    <fullName>Aditya Khatri</fullName>
                </value>
                <value>
                    <fullName>Anshu Pandey</fullName>
                </value>
                <value>
                    <fullName>Hrishikesh Singh</fullName>
                </value>
                <value>
                    <fullName>Deepak Chugh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response_Duration_hh_mm__c</fullName>
        <formula>IF( Response_Time_Hours__c  &amp;  Response_Time_Minutes__c = &quot;0:0&quot;,&quot;00:00&quot;, Response_Time_Hours__c  &amp; 
 &quot;.&quot; &amp;  Response_Time_Minutes__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Duration (hh:mm)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Time_Hours__c</fullName>
        <formula>IF(
 FLOOR((First_Response_Time__c - CreatedDate)*24)&gt;9,
 Text(FLOOR((First_Response_Time__c - CreatedDate)*24)),
 &quot;0&quot; &amp; TEXT(FLOOR((First_Response_Time__c - CreatedDate)*24))
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Time Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Time_Minutes__c</fullName>
        <formula>IF(
 ROUND(MOD((First_Response_Time__c - CreatedDate)*1440,60),0)&gt;9,TEXT(ROUND(MOD((First_Response_Time__c - 
 CreatedDate)*1440,60),0)),
 &quot;0&quot; &amp; TEXT(ROUND(MOD((First_Response_Time__c - 
 CreatedDate)*1440,60),0))
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Time Minutes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Transport_Declaration_Status__c</fullName>
        <label>Self Transport Declaration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Self_Transport_Declaration__c</fullName>
        <label>Self Transport Declaration</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Transport_Declaration__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Come To Work</fullName>
                </value>
                <value>
                    <fullName>Back Home</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shift_Timing__c</fullName>
        <label>Shift Timing</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Transport_Declaration__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0600-1500</fullName>
                </value>
                <value>
                    <fullName>0700-1600</fullName>
                </value>
                <value>
                    <fullName>0800-1700</fullName>
                </value>
                <value>
                    <fullName>0900-1800</fullName>
                </value>
                <value>
                    <fullName>1000-1900</fullName>
                </value>
                <value>
                    <fullName>1100-2000</fullName>
                </value>
                <value>
                    <fullName>1200-2100</fullName>
                </value>
                <value>
                    <fullName>1500-0000</fullName>
                </value>
                <value>
                    <fullName>1600-0100</fullName>
                </value>
                <value>
                    <fullName>1700-0200</fullName>
                </value>
                <value>
                    <fullName>2100-0600</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Baggage Allowance</fullName>
                </value>
                <value>
                    <fullName>Baggage Open Condition</fullName>
                </value>
                <value>
                    <fullName>Bottle Broken</fullName>
                </value>
                <value>
                    <fullName>Conveyor Belt Issue</fullName>
                </value>
                <value>
                    <fullName>Customs/Immigration Issue</fullName>
                </value>
                <value>
                    <fullName>EBC Issue</fullName>
                </value>
                <value>
                    <fullName>Exchange Baggage / Taken By Passenger</fullName>
                </value>
                <value>
                    <fullName>Flight Status</fullName>
                </value>
                <value>
                    <fullName>Gate No-Show</fullName>
                </value>
                <value>
                    <fullName>Guest Error</fullName>
                </value>
                <value>
                    <fullName>InApplicable</fullName>
                </value>
                <value>
                    <fullName>Internet Booking</fullName>
                </value>
                <value>
                    <fullName>Invalid Complaint</fullName>
                </value>
                <value>
                    <fullName>Itinerary</fullName>
                </value>
                <value>
                    <fullName>Late Baggage Delivery</fullName>
                </value>
                <value>
                    <fullName>Left Behind</fullName>
                </value>
                <value>
                    <fullName>Level 4/DG Restrictions</fullName>
                </value>
                <value>
                    <fullName>LOPA - Voucher</fullName>
                </value>
                <value>
                    <fullName>LRT Issues</fullName>
                </value>
                <value>
                    <fullName>LRT Signed</fullName>
                </value>
                <value>
                    <fullName>MAAS Issue</fullName>
                </value>
                <value>
                    <fullName>Minor Damage</fullName>
                </value>
                <value>
                    <fullName>Misinformation</fullName>
                </value>
                <value>
                    <fullName>Mis-Information</fullName>
                </value>
                <value>
                    <fullName>Misuse - Credit Card/Credit Shell/Voucher</fullName>
                </value>
                <value>
                    <fullName>Nil Value Declared</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>No-Show</fullName>
                </value>
                <value>
                    <fullName>Offer/Sale Query</fullName>
                </value>
                <value>
                    <fullName>OND Short Connection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Department__c</fullName>
        <label>Sub-Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Travel Portals/Travel Agents</fullName>
                </value>
                <value>
                    <fullName>Customer Cases</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Flight Status</fullName>
                </value>
                <value>
                    <fullName>Baggage allowance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Swap__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Swap With</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Swapping_With__c</fullName>
        <label>Swapping With</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Testing__c</fullName>
        <label>Testing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Baggage_Weight__c</fullName>
        <inlineHelpText>In Kg</inlineHelpText>
        <label>Total Baggage Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Missing_Baggages_Wt__c</fullName>
        <label>Total Missing Baggages Wt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Missing_Baggages__c</fullName>
        <label>Total Missing Baggages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Pieces_Checked_In__c</fullName>
        <label>Total Pieces Checked In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Weight_of_Missing_Baggage__c</fullName>
        <inlineHelpText>In Kg</inlineHelpText>
        <label>Total Weight of Missing Baggage</label>
        <summarizedField>Baggage_Detail__c.Weight_of_Missing_Baggage__c</summarizedField>
        <summaryForeignKey>Baggage_Detail__c.Case_No__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transport_Declaration__c</fullName>
        <label>Transport Declaration</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Admin_Subject__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weight_of_Missing_Baggage__c</fullName>
        <inlineHelpText>In Kg</inlineHelpText>
        <label>Weight of Missing Baggage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>PNR_No__c</columns>
        <columns>Category__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>Departure_Station__c</columns>
        <columns>Arrival_Station__c</columns>
        <columns>Dhaka__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>Airport_Staff</group>
            <group>Ground_Services_Airport_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_BIR_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>PNR_No__c</columns>
        <columns>Department__c</columns>
        <columns>Sub_Department__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.BIR</value>
        </filters>
        <label>All BIR Cases</label>
        <sharedTo>
            <group>Customer_Experience_Team</group>
            <group>Ground_Services_Airport_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Department__c</columns>
        <columns>Sub_Department__c</columns>
        <columns>Category__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>COK_View</fullName>
        <booleanFilter>(1 OR 2 OR 3) AND 4 AND 5</booleanFilter>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>PNR_No__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>Departure_Station__c</columns>
        <columns>Arrival_Station__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Arrival_Station__c</field>
            <operation>equals</operation>
            <value>Kochi (COK)</value>
        </filters>
        <filters>
            <field>Departure_Station__c</field>
            <operation>equals</operation>
            <value>Kochi (COK)</value>
        </filters>
        <filters>
            <field>Dhaka__c</field>
            <operation>equals</operation>
            <value>Kochi (COK)</value>
        </filters>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Airport Services</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open,Working,Waiting on Concerned Department,On Hold,Escalated,Closed</value>
        </filters>
        <label>COK View</label>
    </listViews>
    <listViews>
        <fullName>Cargo_Unassigned_Cases_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Cargo Unassigned Cases</label>
        <queue>Cargo_Unassigned_Cases</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cargo_Unassigned_Emails_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Cargo Unassigned Emails</label>
        <queue>Cargo_Unassigned_Emails</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cases_from_My_Airport</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Department__c</columns>
        <columns>Sub_Department__c</columns>
        <columns>Category__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Airport__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Cases from My Airport</label>
        <sharedTo>
            <group>Ground_Services_Airport_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>For_Owner_case_Transfer</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>Contact_Name__c</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>For Owner case Transfer</label>
        <sharedTo>
            <role>Deputy_Manager</role>
            <role>Sr_Manager</role>
            <role>Supervisor_CX</role>
            <role>Team_Lead</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>International_Station</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Category__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>Departure_Station__c</columns>
        <columns>Arrival_Station__c</columns>
        <columns>Case_Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Departure_Station__c</field>
            <operation>equals</operation>
            <value>,Bangkok (BKK),Colombo (CMB),Dhaka(DAC),Dubai (DXB),Kabul (KBL),Male (MLE)</value>
        </filters>
        <filters>
            <field>Arrival_Station__c</field>
            <operation>equals</operation>
            <value>,Bangkok (BKK),Colombo (CMB),Dhaka(DAC),Dubai (DXB),Kabul (KBL),Male (MLE)</value>
        </filters>
        <label>International Station</label>
        <sharedTo>
            <role>Airport_Manager</role>
            <role>Head_Ground_Services</role>
            <role>Senior_Manager</role>
            <role>Sr_CSE_CSE_Tr_CSE</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Kabul_Station</fullName>
        <booleanFilter>(1 OR 2 OR  3) AND 4 AND 5</booleanFilter>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Departure_Station__c</columns>
        <columns>Arrival_Station__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Arrival_Station__c</field>
            <operation>equals</operation>
            <value>Kabul (KBL)</value>
        </filters>
        <filters>
            <field>Departure_Station__c</field>
            <operation>equals</operation>
            <value>Kabul (KBL)</value>
        </filters>
        <filters>
            <field>Dhaka__c</field>
            <operation>equals</operation>
            <value>Kabul (KBL)</value>
        </filters>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Airport Services</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open,Working,Waiting on Concerned Department,On Hold,Escalated,Closed</value>
        </filters>
        <label>Kabul Station</label>
        <sharedTo>
            <group>Airport_Staff</group>
            <group>Ground_Services_Airport_Team</group>
        </sharedTo>
    </listViews>
</CustomObject>